# SE_laba_1

./: .gitignore  CMakeLists.txt  CustomerService.cpp  CustomerService.h  DeleteDuplicatesImage.cpp  DeleteDuplicatesImage.h  ICustomerService.h  ISaveImage.h  Image.cpp  Image.h  ImageHelper.cpp  ImageHelper.h  Product.cpp  Product.h  ProductValidate.cpp  ProductValidate.h  ProductValidater.cpp  ProductValidater.h  README.md  SaveImage.cpp  SaveImage.h  SmtpMailer.cpp  SmtpMailer.h  main.cpp
task1/: Product.cpp
task2/: Account.cpp  Account.h  DeleteDuplicatesImage.cpp  DeleteDuplicatesImage.h  DownloadImage.cpp  DownloadImage.h  Image.cpp  Image.h  InvertColorsImage.cpp  InvertColorsImage.h  RequestDataBase.cpp  RequestDataBase.h  ResizeImage.cpp  ResizeImage.h  SaveImage.cpp  SaveImage.h  Url.cpp  Url.h
task3/: ILogger.h  LoggerDataBase.cpp  LoggerDataBase.h  LoggerTextFile.cpp  LoggerTextFile.h  SmtpMailer.cpp  SmtpMailer.h
